fix object editor tabs collapsing

--- a/web/style.css
+++ b/web/style.css
@@ -430,6 +430,7 @@ textarea {
 	padding-top: 30px;
 	width: 100%;
 	height: 100%;
+	overflow-y: scroll;
 }
 
 #settings_tab {
